Code Compiler and testcase judge Architecture and data flow  Change